[package]
name = "tree"
version = "1.0.0"
edition = "2021"
authors = ["Tian Yuan"]
description = """
A simple tree command
"""
keywords = ["tree", "search", "file", "folder"]
autotests = false

[[bin]]
name = "tree"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
walkdir = "2.4.0"
